feat(bff): update tool url <-> base64
