# docs/callback/swagger.json
@@ -522,6 +522,51 @@
                 }
             }
         },
+        "/file/upload/base64": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "callback"
+                ],
+                "summary": "通过base64上传文件",
+                "parameters": [
+                    {
+                        "description": "通过base64格式上传文件参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UploadFileByBase64Req"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.UploadFileByBase64Resp"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/file/url/base64": {
             "post": {
                 "consumes": [
@@ -1207,101 +1252,6 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/response.ToolSquareDetail"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/workflow/upload/file": {
-            "post": {
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "callback"
-                ],
-                "summary": "通过二进制上传文件",
-                "parameters": [
-                    {
-                        "type": "file",
-                        "description": "文件",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "文件名",
-                        "name": "fileName",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/response.UploadFileByWorkflowResp"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/workflow/upload/file/base64": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "callback"
-                ],
-                "summary": "通过base64上传文件",
-                "parameters": [
-                    {
-                        "description": "通过base64格式上传文件参数",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.WorkflowUploadFileByBase64Req"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/response.UploadFileByWorkflowResp"
                                         }
                                     }
                                 }
@@ -4307,6 +4257,25 @@
                 }
             }
         },
+        "request.UploadFileByBase64Req": {
+            "type": "object",
+            "required": [
+                "file"
+            ],
+            "properties": {
+                "file": {
+                    "description": "base64格式",
+                    "type": "string"
+                },
+                "fileExt": {
+                    "description": "文件后缀名，如 \"png\", \"pdf\"",
+                    "type": "string"
+                },
+                "fileName": {
+                    "type": "string"
+                }
+            }
+        },
         "request.WeightParams": {
             "type": "object",
             "properties": {
@@ -4415,25 +4384,6 @@
         },
         "request.WgaSandboxTool": {
             "type": "object"
-        },
-        "request.WorkflowUploadFileByBase64Req": {
-            "type": "object",
-            "required": [
-                "file"
-            ],
-            "properties": {
-                "file": {
-                    "description": "base64格式",
-                    "type": "string"
-                },
-                "fileExt": {
-                    "description": "文件后缀名，如 \"png\", \"pdf\"",
-                    "type": "string"
-                },
-                "fileName": {
-                    "type": "string"
-                }
-            }
         },
         "response.CustomToolActionInfo": {
             "type": "object",
@@ -4892,7 +4842,7 @@
                 }
             }
         },
-        "response.UploadFileByWorkflowResp": {
+        "response.UploadFileByBase64Resp": {
             "type": "object",
             "properties": {
                 "uri": {
