# internal/bff-service/model/request/workflow.go
@@ -36,16 +36,6 @@ func (u *WorkflowUploadFileReq) Check() error {
 	return nil
 }
 
-type WorkflowUploadFileByBase64Req struct {
-	File     string `form:"file" json:"file" validate:"required"` // base64格式
-	FileName string `form:"fileName" json:"fileName"`
-	FileExt  string `form:"fileExt" json:"fileExt"` // 文件后缀名，如 "png", "pdf"
-}
-
-func (u *WorkflowUploadFileByBase64Req) Check() error {
-	return nil
-}
-
 type WorkflowConvertReq struct {
 	WorkflowID string `json:"workflow_id" validate:"required"`
 }
