# internal/bff-service/model/response/callback.go
@@ -1,0 +1,6 @@
+package response
+
+type UploadFileByBase64Resp struct {
+	Url string `json:"url"`
+	Uri string `json:"uri"`
+}
